--- a/app/views/public/pages/nos_collections.html.erb
+++ b/app/views/public/pages/nos_collections.html.erb
@@ -2,7 +2,7 @@
   "Nos collections", 
   "Découvrez notre sélection de tenues d'exception",
   image1: "nos_collections1.webp",
-  image2: "https://images.pexels.com/photos/14339119/pexels-photo-14339119.jpeg"
+  image2: "collections2.webp"
 ) %>
 
 <div class="public-main-content">
